Fix mushroom database index view img alignment

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -47,7 +47,8 @@
 }
 
 .shroom-image {
-  width: 100%;
+  height: 200px;
+  width: 200px;
 }
 
 .swell {
